Reviewed recommendations from Collaborator. Run through code with SonarLint